--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,5 +1,5 @@
 body {background-color:#000000;color:#FFFFFF;margin:0px;padding:0px;font-size:14px;font-family:Arial;text-shadow: 1px 1px 0px #000000,  -1px 1px 1px #000000,  -1px -1px 1px #000000,  1px -1px 1px #000000, -1px -1px 1px #CCCCCC, 0px 2px 2px #FF0000, 2px 2px 2px #444444;}
-a {color:#6699FF;}
+a, .like_a {color:#6699FF;}
 a:visited {color:#6666FF;}
 a:hover, a:hover:visited {color:#FFFFFF;}
 
@@ -8,11 +8,11 @@ a:hover, a:hover:visited {color:#FFFFFF;}
 
 
 .headrr {position:relative;top:0px;left:0px;width:100%;height:80px;border-collapse:collapse;}
-.logor {position:absolute;top:0px;left:0px;z-index:1000;}
-.logor_td {text-align:left;width:300px;}
+/*.logor {position:absolute;top:0px;left:0px;z-index:1000;}
+.logor_td {text-align:left;width:300px;}*/
 .right_td {}
 .headrr_sub {width:100%;}
-.nav1 {text-align:right;padding-right:20px;font-size:24px;font-weight:bold;font-family:Arial;}
+.nav1 {text-align:right;padding-right:20px;font-size:20px;font-weight:normal;font-family:Arial;}
 .nav1 a {text-decoration:none;}
 .nav2 {text-align:right;padding-right:20px;font-size:14px;}
 
@@ -21,8 +21,9 @@ a:hover, a:hover:visited {color:#FFFFFF;}
 	.nav2 {font-size:0.8em;}
 }
 
-
+/*why do that??
 h1, h2, h3, h4, h5, h6, p, a {position:relative;z-index:1001;}
+*/
 
 .negaten {width:0;height:0;border:none;}
 
@@ -78,3 +79,137 @@ filter: alpha(opacity = 0);
 .fluidbigpic {width:50%;}
 .fluid_bigpic {width:100%;max-width:350px;height:auto;}
 
+
+/*===============new css 2021===============*/
+
+/*new nav stuff.. it needs to be more like comploto*/
+.mobinav_toggle {display:none;}
+
+ul#nav {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    z-index: 100;
+}
+ul#nav li {
+    display: inline;
+    position: relative;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-weight: bold;
+    font-size: 13px;
+}
+ul#nav li ul {
+    display: none;
+    position: absolute;
+    top: 1em;
+    left: 0;
+    padding: 0;
+    padding-top:4px;
+    margin: 0;
+    width: 120px;
+}
+ul#nav li ul li {
+    display: block;
+    list-style: none;
+    text-align: left;
+    padding: 4px;
+}
+ul#nav li > ul#nav {
+    top: auto;
+    left: auto;
+}
+ul#nav li:hover ul, ul#nav li.over ul{ display: block; }
+a.selected_lang {
+    background-color:#6666FF;
+    color:#000000;
+    padding-right:4px;
+    padding-left:4px;
+    text-shadow: 1px 1px 5px #FFFFFF, -1px 1px 5px #FFFFFF, -1px -1px 5px #FFFFFF, 1px -1px 5px #FFFFFF;
+    border-radius: 4px;
+    box-shadow: 1px 1px 0px #000000, -1px 1px 1px #000000, -1px -1px 1px #000000, 1px -1px 1px #000000, -1px -1px 1px #CCCCCC, 0px 2px 2px #FF0000, 2px 2px 2px #444444;
+}
+.lang_separ {color: grey;}
+
+@media only screen and (max-width: 800px) {
+	ul#nav li {
+		font-size: 24px;
+	}
+	.header_container {padding:0;width:auto;}
+	ul#nav li {
+        display: block;
+        text-align: left;
+        margin: 10px;
+
+    }
+    .mobinav_toggle {
+        font-size: 24px;
+        cursor:pointer;
+        display:block;
+        padding: 10px;
+        height: 21px;
+    }
+    #nav {
+        display: none;
+        position:absolute !important;
+        width: 100%;
+        background-color: #000000;
+    }
+    #nav.mobile_nav_show {
+        display: block;
+    }
+    ul#nav li:hover ul, ul#nav li.over ul{ display: none; }
+    ul#nav li ul {
+        width:400px !important;
+        z-index:1001;
+    }
+}
+
+/*I am tired of putting those manually*/
+a[onclick] {cursor:pointer;}
+
+/*user forms*/
+
+.message {border:none;width: 90%;text-align: center;margin:auto;margin-bottom:20px;margin-top:50px;box-shadow: 1px 1px 5px #FFF, -1px 1px 5px #FFF, -1px -1px 5px #FFF, 1px -1px 5px #FFF;padding: 4px;}
+.message.success {background-color: mediumseagreen;}
+.message.error {background-color: orangered;}
+.message.notice {background-color: #ffe300;}
+.user_form {margin:auto;max-width: 90%;width: 500px;}
+.user_form h1 {text-align: center;}
+.user_form_input {margin-top:10px}
+.user_form_input label {display:inline-block;width:38%;}
+.user_form_input input {display:inline-block;width:58%;}
+.user_form_submit {text-align: center;margin-top:20px;}
+.user_form_submit input {height:40px;}
+.user_form_link {text-align: center;margin-top:20px;}
+
+.welcome {
+    font-size:24px;
+    text-align: center;
+    margin:20px;
+    margin-top:50px;
+}
+
+input[type=submit] {
+    background-color: #6699FF;
+    border: none;
+    box-shadow: 1px 1px 0px #000000,  -1px 1px 1px #000000,  -1px -1px 1px #000000,  1px -1px 1px #000000, -1px -1px 1px #CCCCCC, 0px 2px 2px #FF0000, 2px 2px 2px #444444;
+    text-shadow: 1px 1px 0px #000000,  -1px 1px 1px #000000,  -1px -1px 1px #000000,  1px -1px 1px #000000, -1px -1px 1px #CCCCCC, 0px 2px 2px #FF0000, 2px 2px 2px #444444;
+    color: #FFFFFF;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+
+/*video thumbs*/
+.video_thumbs_container {
+    text-align: center;
+}
+.video_thumb {
+    display:inline-block;
+    padding:4px;
+}
