--- a/web/css/style.css
+++ b/web/css/style.css
@@ -42,6 +42,7 @@ h1, h2, h3, h4, h5, h6, p, a {position:relative;z-index:1001;}
 .vidform {font-size:14px;}
 .tittx, .popupx {max-width:320px;width:100%;}
 .descrtx {max-width:320px;width:100%;height:90px;}
+.channelgrx {max-width:320px;width:100%;}
 .labezl {text-align:left;vertical-align:top;}
 .uploadthing {max-width:240px;width:100%;}
 
@@ -177,6 +178,7 @@ a[onclick] {cursor:pointer;}
 .message {border:none;width: 90%;text-align: center;margin:auto;margin-bottom:20px;margin-top:50px;box-shadow: 1px 1px 5px #FFF, -1px 1px 5px #FFF, -1px -1px 5px #FFF, 1px -1px 5px #FFF;padding: 4px;}
 .message.success {background-color: mediumseagreen;}
 .message.error {background-color: orangered;}
+.message.error a, .message.error .like_a {color: #e0d8ff;}
 .message.notice {background-color: #ffe300;}
 .user_form {margin:auto;max-width: 90%;width: 500px;}
 .user_form h1 {text-align: center;}
@@ -187,7 +189,7 @@ a[onclick] {cursor:pointer;}
 .user_form_submit input {height:40px;}
 .user_form_link {text-align: center;margin-top:20px;}
 
-.welcome {
+.page_title {
     font-size:24px;
     text-align: center;
     margin:20px;
@@ -217,7 +219,7 @@ input[type=submit] {
     color:red;
 }
 
-.video {
+.video, .video_edit {
     max-width:960px;
     margin:auto;
 }
@@ -268,4 +270,29 @@ input[type=submit] {
 }
 .video .description p {
     margin:0;
+}
+
+.channels_container {
+    max-width:400px;
+    text-align: center;
+    margin:auto;
+}
+.channels_container .channel {
+    font-size:20px;
+    text-align: left;
+}
+.channels_container .channel .channel_actions {
+    font-size:12px;
+}
+
+.back_page{
+    text-align: left;
+    padding: 0 20px;
+}
+.actions{
+    text-align: right;
+    padding: 0 20px;
+}
+.pagination {
+    margin-top:24px;
 }
