--- a/web/css/style.css
+++ b/web/css/style.css
@@ -331,6 +331,9 @@ video_thumb_img {
     margin-top:24px;
 }
 
+.channel_next {
+    text-align: center;
+}
 
 @media only screen and (max-width: 800px) {
 	ul#nav li {
